test tab bar with icon, text and icon with text. tab bar text alignment fixed. TBD: focused icon have ugly margin.
git-svn-id: http://dev.vaadin.com/svn/addons/TouchKit@24198 de684a11-831f-0410-ab27-cb86445eb682

--- a/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
+++ b/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
@@ -1123,11 +1123,12 @@
 	height: auto;
 	border-radius: 0;
 	text-indent: 0;
-	margin: 27px 0 0 0; /* At the bottom of the button, even without icon */
+	vertical-align: middle;
+	margin: 7px 0 0 0; /* At the bottom of the button, even without icon */
 }
 
 .v-touchkit-tabbar-toolbar .v-touchkit-toolbar .v-button .v-icon {
-	margin: 0 0 -25px 0; /* Compensate the space consumed by icon as caption is positioned with margin */
+	margin: 0 0 -12px 0; /* Compensate the space consumed by icon as caption is positioned with margin */
 }
 
 .v-touchkit-tabbar-toolbar .v-touchkit-toolbar .v-button-wrap:before {
